fixing some layout issues concerning the box header.
This way, the buttons do not longer overlap.

https://trello.com/c/UltFB8Ef/636-semesterstatistiken-für-die-bundessteuer

--- a/app/assets/stylesheets/your_platform/new_box.sass
+++ b/app/assets/stylesheets/your_platform/new_box.sass
@@ -3,7 +3,7 @@
   position: relative
 
   > .box_header
-    display: block
+    display: flow-root
 
     > .box_title
       h1, h2, h3, h4, h5, h6
@@ -26,7 +26,7 @@
         width: auto
 
     > .box_tools
-      position: absolute
+      float: right
       top: 5px
       right: 5px
       z-index: 20
